part-2/exercise_2-03/manifests/deployment_log.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dwk-exercises
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-vol
          persistentVolumeClaim:
            claimName: sv-claim
      containers:
        - name: log-output-writer
          image: ethanrailo/log-output-writer:version1.0
          volumeMounts:
            - name: shared-vol
              mountPath: /usr/src/app/files
        - name: log-output-reader
          image: ethanrailo/log-output-reader:version1.3
          volumeMounts:
            - name: shared-vol
              mountPath: /usr/src/app/files
