part-2/exercise_2-03/manifests/service_pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dwk-exercises
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 3000
