part-2/exercise_2-03/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-exercises-ingress
  namespace: dwk-exercises
spec:
  rules:
    - http:
        paths:
          - path: /logoutput
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 2345
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 2347
